1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (OBJCLIBS): Append -DDLL flag in the case
	of DLLs sans static.

	* Makefile.rules (.m.o): Add CPPFLAGS.

	* Makefile.tests.in (SWARMBUILDLDFLAGS): Revert last change.

	* Makefile.common.in (SWARMLIBS): Return to using -lswarm.
	(OBJCLIBS): Remove in DLL case.

1999-06-07  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (SWARMBUILDLDFLAGS): If $(USEDLL) is set,
	point the linker to the location for -lswarm in the build
	directory, if not set, generate the appropriate flags from the
	list of SWARMMODULES.
	(LIBS): Add $(OBJCLIBS).

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SWARMLIBS, OBJCLIBS): Select -l{swarm,objc}
	or -l{swarm,objc}dll on the basis of USEDLL and USESTATIC.
	(SYSLIBS): Remove OBJCLIBS.

	* Makefile.appl: Use $(OBJCLIBS) instead of -lobjc.

1999-06-03  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (INCLUDES): Use SWARMMODULES.
	(SWARMBUILDLDFLAGS): New flag to point to new libswarm.la
	convenience library, located in $(top_builddir)/src.  Remove flags
	to point to individual module libraries.

1999-06-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (jdkdosdir): Remove.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (EXPORT_EXTERN, IMPORT_EXTERN): Substitute.

1999-05-28  Marcus G. Daniels  <mgd@chimayo.santafe.edu>

	* protocol.el (check-common-tags): Use externvar for globals
	and remove compilcated regex qualification.

1999-05-27  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_SWARMLIBS): Replace explicit list of
	libraries with `-lswarm'.

1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.appl.in (LDFLAGS): Remove SUPPORTLDFLAGS.
	(LIBS): Remove.
	($(APPEXE)): Remove LIBS and SYSLIBS, but keep -lobjc.
	
	* genctors: New file.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
