@@ -67,7 +67,7 @@ GUILIBS = @GUILIBS@
 
 DLLIB = @DLLIB@
 
-SUPPORTLDFLAGS = $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(HDF5LDFLAGS) $(BLTLDFLAGS) $(TCLLDFLAGS) $(XPMLDFLAGS) $(TKLDFLAGS) $(X_LIBS) $(EXTRALDFLAGS)
+SUPPORTLDFLAGS = $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(HDF5LDFLAGS) $(BLTLDFLAGS) $(TCLLDFLAGS) $(XPMLDFLAGS) $(TKLDFLAGS) $(X_LIBS)
 
 SYSLIBS = $(BLTLIB) $(TKLIB) $(TCLLIB) $(XPMLIB) $(PNGLIB) $(HDF5LIB) $(ZLIBLIB) $(FFILIB) $(GUILIBS) -lm $(DLLIB)
 
@@ -84,7 +84,7 @@ OBJCLIBS = -lobjc
 else
 SWARMLIBS = -lswarmdll
 OBJCLIBS = 
-override CPPFLAGS += -DDLL
+EXTRACPPFLAGS = -DDLL
 endif
 else
 SWARMLIBS = -lswarm
