@@ -1,7 +1,7 @@
 .SUFFIXES: .m .xm
 
 .m.o:
-	$(CC) -c -Wno-import -Wno-protocol $(CFLAGS) $(CPPFLAGS) $(SWARMINCLUDES) $< 
+	$(CC) -c -Wno-import -Wno-protocol $(CFLAGS) $(CPPFLAGS) $(EXTRACPPFLAGS) $(SWARMINCLUDES) $< 
 
 # Local Variables:
 # mode: makefile
